# lime_api

./: .gitignore  CMakeLists.txt  README.md
public/src/: CMakeLists.txt
public/src/include/: atomic_spin_lock.h  bit.h  constexpr_string.h  conversion_string.h  duration.h  endian.h  non_copyable.h  non_movable.h  quotation.h  spsc_fixed_queue.h  symbol_name.h  synchronization_mode.h  type_rich.h
public/src/include/concepts/: numeric_concept.h
public/src/include/duration/: duration.h  duration_since_epoch.h  duration_since_midnight.h
public/src/include/endian/: byte_swap.h  endian.h  endian_swap.h
public/src/include/quotation/: fixed_price.h  price.h  quotation.h  shares.h
public/src/test/: CMakeLists.txt
scripts/: fetch_dependencies.cmake
